updating homepage as image content had been removed with merge and added id tag to homepage and login page, fixed spacing in nav bar home button.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -150,3 +150,11 @@ li {
     padding: 15px 5px;
     margin: 5px;
 }
+
+image {
+border: 1px solid #ddd;
+border-radius: 4px;
+padding: 5px;
+width: 150px;
+
+}
